fix alignment of header elements

--- a/src/components/common-blocks/header/header.css
+++ b/src/components/common-blocks/header/header.css
@@ -2,6 +2,9 @@
 .home-page .header {
 	width: 100%;
 	position: fixed;
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
 	top: 0;
 	padding: 18px;
 	background-color: var(--header-background-color);
@@ -15,7 +18,7 @@
 	font-family: Roboto;
 	font-size: 25px;
 	padding: 5px;
-	padding-left: 5%;
+	padding-left: 1%;
 	margin: 15px;
 }
 
@@ -23,7 +26,7 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	padding-right: 5%;
+	padding-right: 1%;
 }
 
 .header__mobile-menu {
